--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,8 +1,8 @@
 .catalog {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 200px);
+  grid-template-columns: repeat(4, 200px);
   justify-content: center;
-  gap: 0 48px;
+  gap: 48px;
   max-width: 944px;
   margin: 0 auto;
 
@@ -14,7 +14,6 @@
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 48px;
   }
 
   &__card:not(:nth-child(4n)) {
@@ -24,18 +23,18 @@
 
 @media (max-width: 1023.9px) {
   .catalog {
-    max-width: 940px;
+    grid-template-columns: repeat(3, 200px);
   }
 }
 
 @media (max-width: 767.9px) {
   .catalog {
-    max-width: 690px;
+    grid-template-columns: repeat(2, 200px);
   }
 }
 
 @media (max-width: 487.9px) {
   .catalog {
-    max-width: 420px;
+    grid-template-columns: repeat(1, 200px);
   }
 }
