--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,27 +1,27 @@
 .catalog {
   display: grid;
-  grid-template-columns: repeat(4, 200px);
+  grid-template-columns: repeat(4, $width-card);
   justify-content: space-around;
   max-width: 994px;
   margin: 0 auto;
 
   @media (max-width: 1023px) {
-    grid-template-columns: repeat(3, 200px);
+    grid-template-columns: repeat(3, $width-card);
   }
   
   @media (max-width: 767px) {
-    grid-template-columns: repeat(2, 200px);
+    grid-template-columns: repeat(2, $width-card);
   }
   
   @media (max-width: 487px) {
-    grid-template-columns: repeat(1, 200px);
+    grid-template-columns: repeat(1, $width-card);
   }
 
   &__card {
     display: grid;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: $width-card;
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
